tests/ui/specialization/min_specialization/specialize_on_static.stderr
error: cannot specialize on `'static` lifetime
  --> $DIR/specialize_on_static.rs:13:1
   |
LL | impl X for &'static u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

